--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
         <ul class="menu">
             <li>
-                <a class="menu-link" href="#">
+                <a class="menu-link" href="catalog.html">
                     каталог
                 </a>
             </li>
 
             <li>
-                <a class="menu-link" href="#">
+                <a class="menu-link" href="#about-me">
                     про мене
                 </a>
             </li>
@@ -28,12 +28,12 @@
             <img class="menu-img" src="img/heder/logoGrann 1.png">
 
             <li>
-                <a class="menu-link" href="#">
+                <a class="menu-link" href="#delivery">
                     доставка
                 </a>
             </li>
             <li>
-                <a class="menu-link" href="#">
+                <a class="menu-link" href="#footer">
                     контакт
                 </a>
             </li>
@@ -48,7 +48,7 @@
     </header>
 
     <section class="main">
-        <div class="container">
+        <div class="container container-main">
             <h1 class="main-title">
                 Авторскі десерти
             </h1>
@@ -85,7 +85,19 @@
             </div>
 
         </div>
+
+
     </section>
+
+    <div class="custom-shape-divider-top-1759830817">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+                d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                class="shape-fill"></path>
+        </svg>
+    </div>
+
+
 
 
     <section class="galery">
@@ -146,10 +158,16 @@
 
             <ul class="bestsaller-name">
                 <li class="bestsaller-photo">
-                    <img class="bestsaller-img" src="./img/Best sellers/Mousse cake Mango-Passionfruit.png">
+
+                    <a class="product-card-wraper" href="product.html">
+                        <img class="bestsaller-img" src="./img/Best sellers/Mousse cake Mango-Passionfruit.png">
+                    </a>
 
                     <div class="bestsaller-text-shop">
-                        <p class="bestsaller-text">Мусовий торт “Манго-маракуйя”</p>
+
+                        <a class="product-text-wraper" href="product.html">
+                            <p class="bestsaller-text">Мусовий торт “Манго-маракуйя”</p>
+                        </a>
 
                         <svg class="icon-card" width="50px" height="50px">
                             <use href="./svg/symbol-defs.svg#icon-cart"></use>
@@ -160,6 +178,7 @@
 
                 </li>
                 <li class="bestsaller-photo">
+                    
                     <img class="bestsaller-img" src="./img/Best sellers/Chocolate brownie.png">
 
                     <div class="bestsaller-text-shop">
@@ -186,7 +205,6 @@
 
                     <span class="bestsaller-price">400 грн/ 6 шт</span>
 
-
                 </li>
                 <li class="bestsaller-photo">
                     <img class="bestsaller-img bestsaller-img-caramel" src="./img/Best sellers/Salted Caramel.png">
@@ -205,14 +223,23 @@
             </ul>
 
             <div class="bestsaller-button-link">
-                <a class="bestsaller-button" href="#">Переглянути весь асортимент</a>
+                <a class="bestsaller-button" href="catalog.html">Переглянути весь асортимент</a>
             </div>
 
         </div>
     </section>
 
+    <div class="grann-custom-shape-divider-top-1759830817">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+                d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                class="grann-shape-fill"></path>
+        </svg>
+    </div>
+
     <section class="grann">
         <div class="container">
+
             <h1 class="main-title">Чому саме Grann?</h1>
 
             <div class="grann-main">
@@ -245,13 +272,15 @@
 
     </section>
 
-    <div class="container">
-        <div class="grann-photo-down">
-            <img src="./img/чому grann/5 pict.png">
+    <section class="grann-photo-down">
+        <div class="container">
+            <div>
+                <img src="./img/чому grann/5 pict.png">
+            </div>
         </div>
-    </div>
+    </section>
 
-    <section class="delivery">
+    <section id="delivery" class="delivery">
         <div class="container">
             <h1 class="main-title">Доставка і оплата</h1>
             <div class="delivery-name">
@@ -294,7 +323,15 @@
         </div>
     </section>
 
-    <section class="about-me">
+    <div class="delivery-custom-shape-divider-top-1759830817">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+                d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                class="delivery-shape-fill"></path>
+        </svg>
+    </div>
+
+    <section id="about-me" class="about-me">
         <div class="container">
 
 
@@ -309,22 +346,25 @@
             </div>
 
             <div class="about-me-text">
-                <p>Від хобі до власної справи.
-
+                <p>Від хобі до власної справи.<br>
+                    <br>
                     Я закінчила DGF International Culinary School в Києві, а згодом навчалася в одній з найвідоміших
                     шкіл
-                    готельного сервісу і кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала після того, як
+                    готельного сервісу і кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала після того,
+                    як
                     здобула
-                    досвід і працювала в одному з найбільших кондитерських цехів Грузії (1500 кв.м.).
-
+                    досвід і працювала в одному з найбільших кондитерських цехів Грузії (1500 кв.м.).<br>
+                    <br>
                     Наразі започаткувала особистий бренд і будую власний кондитерський цех.Моя робота мене надихає.
                     Завдяки
                     моїм
-                    солодощам, я можу дарувати щасливі моменти для вас!</p>
+                    солодощам, я можу дарувати щасливі моменти для вас!
+                </p>
             </div>
 
         </div>
     </section>
+    <!-- </a>  -->
 
     <section class="register">
         <div class="container">
@@ -333,6 +373,7 @@
             <img class="register-photo-text"
                 src="./img/давайте зробимо щось унікальне/Давайте зробимо щось унікальне разом!.png">
             <!-- <p>Давайте зробимо щось унікальне разом!</p> -->
+
             <p class="register-text">Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть
                 заявку та я зв’яжусь з
                 вами, аби обговорити деталі замовлення.</p>
@@ -342,7 +383,7 @@
             <!-- <section class="signup"> -->
             <!-- <div class="container"> -->
 
-            <div class="signup">
+            <form class="signup">
                 <label class="signup-label" for="name"></label><br>
                 <input class="signup-input" type="text" id="name" name="name" placeholder="Ім’я" required><br><br>
 
@@ -354,9 +395,9 @@
                 <textarea class="signup-textarea" id="message" name="message" rows="15" cols="80"
                     placeholder="Опишіть ваші побажання"></textarea><br><br>
 
-                <button class="signup-btn">Надіслати</button>
+                <button class="signup-btn" type="submit">Надіслати</button>
 
-            </div>
+            </form>
             <!-- </div> -->
         </div>
 
@@ -368,11 +409,78 @@
 
             <h2 class="main-title">Популярні запитання</h2>
 
-            <h3 class="question-text">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3>
+            <!-- <h3 class="question-text">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</h3> -->
 
-            <h3 class="question-text">ЧИ Є У ВАС ДОСТАВКА?</h3>
-            <h3 class="question-text">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</h3>
-            <h3 class="question-text">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</h3>
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-title">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?
+                        <span class="arrow">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M7 10l5 5 5-5z" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div class="accordion-content">
+                        <p>Замовлення необхідно зробити як мінімум за 3-4 дні до вашого свята.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <h3 class="question-text">ЧИ Є У ВАС ДОСТАВКА?</h3> -->
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-title">ЧИ Є У ВАС ДОСТАВКА?
+                        <span class="arrow">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M7 10l5 5 5-5z" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div class="accordion-content">
+                        <p>Так, у нас є доставка!
+                            Замовляйте улюблені десерти — ми швидко привеземо їх прямо до вас.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- <h3 class="question-text">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</h3> -->
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-title">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?
+                        <span class="arrow">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M7 10l5 5 5-5z" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div class="accordion-content">
+                        <p>Так, ми готуємо торти з мастики!
+                            Можемо створити дизайн на будь-який смак і подію.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- <h3 class="question-text">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</h3> -->
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-title">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?
+                        <span class="arrow">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M7 10l5 5 5-5z" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <div class="accordion-content">
+                        <p>Так, наші торти безпечні для дітей та вагітних
+                            Ми використовуємо лише свіжі та якісні інгредієнти без шкідливих добавок.</p>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -409,36 +517,67 @@
 
     <footer>
 
-        <section class="footer">
+        <section id="footer" class="footer">
             <div class="container">
                 <!-- <div class="container> -->
 
                 <div class="footer-contact">
-                    <a class="footer-contact-link" href="">с. Хотів, вул. Партизанська 1А</a>
-                    <a class="footer-contact-link" href="">Email: kostromaganna@gmail.com</a>
-                    <a href="">Tel: +38(099) 987 62 40</a>
+                    <ul>
+                        <li class="footer-contacts">
+                            <a class="footer-contact-link" href="#">с. Хотів, вул. Партизанська 1А</a>
+                        </li>
+                        <li class="footer-contacts">
+                            <a class="footer-contact-link" href="#">Email: kostromaganna@gmail.com</a>
+                        </li>
+                        <li class="footer-contact-bottom">
+                            <a class="footer-contact-link footer-padding" href="#">Tel: +38(099) 987 62 40</a>
+                        </li>
+                    </ul>
                 </div>
 
-                <img class="footer-title" src="./img/footer/logoGrann 2.png">
+                <a href="index.html">
+                    <img class="footer-title" src="./img/footer/logoGrann 2.png">
+                </a>
 
 
-                <div class="footer-right">
-                    <div class="footer-photo">
-                        <img src="./svg/Instagram footer (1).svg">
-                        <img src="./svg/telegram footer(1).svg">
-                        <img src="./svg/viber footer.svg">
-                    </div>
+                <div class="footer-right-photo">
 
-                    <div class="footer-help">
-                        <a class="footer-link-help" href="">Політика конфіденційності</a>
-                        <a href="">Договір оферти</a>
-                    </div>
+                    <ul class="footer-right">
+                        <li class="footer-photo">
+                            <a href="#">
+                                <img src="./svg/Instagram footer (1).svg">
+                            </a>
+                        </li>
+                        <li class="footer-photo">
+                            <a href="#">
+                                <img src="./svg/telegram footer(1).svg">
+                            </a>
+                        </li>
+                        <li class="footer-photo">
+                            <a href="#">
+                                <img src="./svg/viber footer.svg">
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <ul class="footer-help">
+                        <li class="footer-help-bottom">
+                            <a class="footer-link-help" href="#">Політика конфіденційності</a>
+                        </li>
+                        <li>
+                            <a class="footer-link-help footer-help-padding" href="#">Договір оферти</a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </section>
 
     </footer>
 
+
+    <script src="accordion.js"></script>
 </body>
 
 </html>
