--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 
             <div class="accordion">
                 <div class="accordion-item">
-                    <div class=" accordion-title-phone">ЧИ Є У ВАС ДОСТАВКА?
+                    <div class="accordion-title accordion-title-phone">ЧИ Є У ВАС ДОСТАВКА?
                         <span class="arrow">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M7 10l5 5 5-5z" />
