--- a/index.html
+++ b/index.html
@@ -86,20 +86,25 @@
 
                 <ul class="social-list">
                     <li>
-                        <svg class="contact">
-                            <use href="./svg/telegram.svg">
-                            </use>
-                        </svg>
+                        <a href="https://web.telegram.org" target="_blank">
+                            <svg class="contact">
+                                <use href="./svg/telegram.svg"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li>
-                        <svg class="contact">
-                            <use href="./svg/Facebook.svg"></use>
-                        </svg>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <svg class="contact">
+                                <use href="./svg/Facebook.svg"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li>
-                        <svg class="contact">
-                            <use href="./svg/Instagram.svg"></use>
-                        </svg>
+                        <a href="https://www.instagram.com" target="_blank">
+                            <svg class="contact">
+                                <use href="./svg/Instagram.svg"></use>
+                            </svg>
+                        </a>
                     </li>
 
                 </ul>
@@ -128,7 +133,9 @@
                         <div class="galery-btn">
                             <p class="label-list">Торти</p>
                         </div>
-                        <img class="galery-btn-arrow" src="./img/galery/bttn more.png">
+                        <a href="catalog.html">
+                            <img class="galery-btn-arrow" src="./img/galery/bttn more.png">
+                        </a>
                     </div>
                 </li>
 
@@ -138,6 +145,9 @@
                         <div class="galery-btn">
                             <p class="label-list">Шу</p>
                         </div>
+                        <a href="catalog.html">
+                            <img class="galery-btn-arrow" src="./img/galery/bttn more.png">
+                        </a>
                     </div>
                 </li>
 
@@ -147,6 +157,9 @@
                         <div class="galery-btn">
                             <p class="label-list">Тістечка</p>
                         </div>
+                        <a href="catalog.html">
+                            <img class="galery-btn-arrow" src="./img/galery/bttn more.png">
+                        </a>
                     </div>
                 </li>
 
@@ -156,6 +169,9 @@
                         <div class="galery-btn">
                             <p class="label-list">Піца</p>
                         </div>
+                        <a href="catalog.html">
+                            <img class="galery-btn-arrow" src="./img/galery/bttn more.png">
+                        </a>
                     </div>
                 </li>
         </div>
@@ -430,7 +446,7 @@
 
                     <label class="signup-label" for="message"></label><br>
                     <textarea class="signup-textarea" id="message" name="message" rows="15" cols="80"
-                        placeholder="Опишіть ваші побажання"></textarea><br><br>
+                        placeholder="Опишіть ваші побажання" required></textarea><br><br>
 
                     <button class="signup-btn" type="submit">Надіслати</button>
 
@@ -553,8 +569,9 @@
 
                 <img class="instagram-arrow" src="./img/instaagram/Vector 36.png">
 
-                <button class="instagram-btn">Завітати на сторінку</button>
-
+                <a href="https://www.instagram.com">
+                    <button class="instagram-btn">Завітати на сторінку</button>
+                </a>
                 <img class="instagram-pointer" src="./img/instaagram/Vector 34.png">
                 <img class="instagram-pointer-down" src="./img/instaagram/Vector 35.png">
 
@@ -594,17 +611,17 @@
 
                         <ul class="footer-right">
                             <li class="footer-photo">
-                                <a href="#">
+                                <a href="https://www.instagram.com" target="_blank">
                                     <img src="./svg/Instagram footer (1).svg">
                                 </a>
                             </li>
                             <li class="footer-photo">
-                                <a href="#">
+                                <a href="https://web.telegram.org" target="_blank">
                                     <img src="./svg/telegram footer(1).svg">
                                 </a>
                             </li>
                             <li class="footer-photo">
-                                <a href="#">
+                                <a href="https://www.viber.com" target="_blank">
                                     <img src="./svg/viber footer.svg">
                                 </a>
                             </li>
