--- a/snickers.html
+++ b/snickers.html
@@ -10,7 +10,7 @@
 
 <body class="body product-bg">
 
-   <header>
+    <header>
         <ul class="menu">
             <li><a href="catalog.html" class="link menu-link">каталог</a></li>
             <li><a href="#about-me" class="link menu-link">про мене</a></li>
@@ -398,17 +398,17 @@
 
                     <ul class="footer-right">
                         <li class="footer-photo">
-                            <a href="#">
+                            <a href="https://www.instagram.com" target="_blank">
                                 <img src="./svg/Instagram footer (1).svg">
                             </a>
                         </li>
                         <li class="footer-photo">
-                            <a href="#">
+                            <a href="https://web.telegram.org" target="_blank">
                                 <img src="./svg/telegram footer(1).svg">
                             </a>
                         </li>
                         <li class="footer-photo">
-                            <a href="#">
+                            <a href="https://www.viber.com" target="_blank">
                                 <img src="./svg/viber footer.svg">
                             </a>
                         </li>
