--- a/waffle.html
+++ b/waffle.html
@@ -398,17 +398,17 @@
 
                     <ul class="footer-right">
                         <li class="footer-photo">
-                            <a href="#">
+                            <a href="https://www.instagram.com" target="_blank">
                                 <img src="./svg/Instagram footer (1).svg">
                             </a>
                         </li>
                         <li class="footer-photo">
-                            <a href="#">
+                            <a href="https://web.telegram.org" target="_blank">
                                 <img src="./svg/telegram footer(1).svg">
                             </a>
                         </li>
                         <li class="footer-photo">
-                            <a href="#">
+                            <a href="https://www.viber.com" target="_blank">
                                 <img src="./svg/viber footer.svg">
                             </a>
                         </li>
